<?xml version="1.0" encoding="utf-8" ?>
<!--
 Copyright 2020 Google LLC

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/item_margin_horizontal"
    android:layout_marginVertical="@dimen/item_margin_vertical"
    android:orientation="vertical"
>

    <com.google.android.fhir.datacapture.views.QuestionnaireItemHeaderView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/header_margin_bottom"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
    >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_input_layout"
            style="?attr/questionnaireTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:endIconDrawable="@drawable/gm_calendar_today_24"
            app:endIconMode="custom"
            app:errorIconDrawable="@null"
            app:hintEnabled="true"
        >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_input_edit_text"
                style="?attr/questionnaireTextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:inputType="date"
                android:singleLine="true"
            />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="@dimen/date_picker_and_time_picker_gap"
            android:layout_height="match_parent"
        />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/time_input_layout"
            style="?attr/questionnaireTextInputLayoutStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:endIconDrawable="@drawable/gm_schedule_24"
            app:endIconMode="custom"
            app:errorIconDrawable="@null"
            app:hintEnabled="true"
        >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/time_input_edit_text"
                style="?attr/questionnaireTextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/time"
                android:inputType="none"
                android:singleLine="true"
                android:focusableInTouchMode="false"
            />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</LinearLayout>
