<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
>
  <TextView
        android:id="@+id/prefix"
        style="?attr/questionnaireReviewModeQuestionTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/prefix_padding_end"
        app:layout_constraintEnd_toStartOf="@+id/question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
    />
  <TextView
        android:id="@+id/question"
        style="?attr/questionnaireReviewModeQuestionTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/prefix"
        app:layout_constraintTop_toTopOf="parent"
    />
  <TextView
        android:id="@+id/hint"
        style="?attr/questionnaireSubtitleTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/instructions_top_margin"
        android:layout_gravity="center_vertical"
        tools:text="Sample helper text"
        app:layout_constraintTop_toBottomOf="@id/question"
        app:layout_constraintStart_toStartOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
