...
            app:flow_horizontalGap="@dimen/option_item_margin_horizontal"
            app:flow_verticalGap="@dimen/option_item_margin_vertical"
            app:flow_horizontalStyle="packed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:constraint_referenced_ids="yes_radio_button, no_radio_button"
        />

        <RadioButton
            style="?attr/questionnaireRadioButtonStyle"
            android:id="@+id/yes_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
        />
        <RadioButton
            style="?attr/questionnaireRadioButtonStyle"
            android:id="@+id/no_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
...
